[package]
name = "mkv-player"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-only"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
ebml-wasm = { path = "../ebml-wasm" }
gloo-net = "0.7.0"
futures = "0.3"
js-sys = "0.3.99"
web-sys = { version = "0.3.99", features = ["console", "ReadableStream", "ReadableStreamDefaultReader"] }
lru = "0.18.0"
wasm-bindgen = "0.2.122"
wasm-bindgen-futures = "0.4.72"

[dev-dependencies]
pollster = "0.4"
