[package]
name = "matroska-remux"
version = "0.1.1"
edition = "2024"
license = "AGPL-3.0-only"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
matroska-ebml = { path = "../ebml-wasm" }
gloo-net = "0.7.0"
futures = "0.3"
js-sys = "0.3.99"
web-sys = { version = "0.3.99", features = ["console", "ReadableStream", "ReadableStreamDefaultReader"] }
lru = "0.18.0"
miniz_oxide = "0.8"
wasm-bindgen = "0.2.122"
wasm-bindgen-futures = "0.4.72"

[dev-dependencies]
pollster = "0.4"
